--- a/FlashProject/FlashProject/Custom Views/Header Footer Views/HeaderMusicView.xib
+++ b/FlashProject/FlashProject/Custom Views/Header Footer Views/HeaderMusicView.xib
@@ -16,25 +16,28 @@
                 <rect key="frame" x="0.0" y="0.0" width="264" height="131"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IlA-cS-XVe">
-                        <rect key="frame" x="20" y="15" width="58.5" height="29"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3X-oA-UhC">
-                        <rect key="frame" x="20" y="54" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="gnE-aj-0ZD">
+                        <rect key="frame" x="20" y="39" width="58.5" height="53.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IlA-cS-XVe">
+                                <rect key="frame" x="0.0" y="0.0" width="58.5" height="29"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3X-oA-UhC">
+                                <rect key="frame" x="0.0" y="33" width="58.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
-                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="IlA-cS-XVe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="0q5-2Y-iMg"/>
-                    <constraint firstItem="C3X-oA-UhC" firstAttribute="top" secondItem="IlA-cS-XVe" secondAttribute="bottom" constant="10" id="9yJ-xx-WKt"/>
-                    <constraint firstItem="C3X-oA-UhC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="GXg-S9-65T"/>
-                    <constraint firstItem="IlA-cS-XVe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="SyX-5G-Cp8"/>
+                    <constraint firstItem="gnE-aj-0ZD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="N2Z-D6-Hri"/>
+                    <constraint firstItem="gnE-aj-0ZD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="WUA-p9-0Ip"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -42,7 +45,7 @@
                 <outlet property="headerDescription" destination="C3X-oA-UhC" id="0td-Bj-6Ez"/>
                 <outlet property="headerTitle" destination="IlA-cS-XVe" id="cg4-Yg-e3Z"/>
             </connections>
-            <point key="canvasLocation" x="1.4492753623188408" y="-34.486607142857139"/>
+            <point key="canvasLocation" x="3" y="-18"/>
         </tableViewCell>
     </objects>
 </document>
