--- a/FlashProject/FlashProject/Resources/AlbumSearchResultCell.xib
+++ b/FlashProject/FlashProject/Resources/AlbumSearchResultCell.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="349" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="349" height="91"/>
+                <rect key="frame" x="0.0" y="0.0" width="349" height="90.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DOTA2" translatesAutoresizingMaskIntoConstraints="NO" id="mqt-w4-qw6">
@@ -24,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="CcT-UR-AFJ">
-                        <rect key="frame" x="90" y="19.5" width="96" height="52.5"/>
+                        <rect key="frame" x="90" y="19" width="96" height="52.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZR-8d-Bar">
                                 <rect key="frame" x="0.0" y="0.0" width="96" height="20.5"/>
@@ -46,6 +49,7 @@
                     <constraint firstItem="mqt-w4-qw6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Da2-wl-qf4"/>
                     <constraint firstItem="CcT-UR-AFJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Ens-sE-kC9"/>
                     <constraint firstItem="mqt-w4-qw6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fsc-Mb-iSU"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="CcT-UR-AFJ" secondAttribute="trailing" constant="20" id="rmi-84-lxd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
